# AI_bug_fixer

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/agent_orchestration/: __init__.py
src/agent_orchestration/application/: bug_fixer_orchestrator.py
src/agent_orchestration/domain/: __init__.py  interfaces.py  personas.py  state.py
src/agent_orchestration/infrastructure/: __init__.py  base_agent.py  coder_agent.py  ollama_client.py  openai_client.py  planner_agent.py  reviewer_agent.py
src/config/: __init__.py  settings.py
src/detection/: __init__.py
src/detection/application/: __init__.py  bug_detection_service.py
src/detection/domain/: __init__.py  entities.py  interfaces.py
src/detection/infrastructure/: __init__.py  llm_bug_detector.py  static_analyzer.py  test_failure_parser.py
src/discovery/: __init__.py
src/discovery/application/: __init__.py  discovery_service.py
src/discovery/domain/: __init__.py
src/discovery/infrastructure/: __init__.py  pattern_detector.py
src/fix_agent_orchestration/application/: __init__.py  bug_fixer_orchestrator.py
src/fix_agent_orchestration/domain/: interfaces.py
src/fix_agent_orchestration/infrastructure/: base_agent.py  coder_agent.py  ollama_client.py  openai_client.py  planner_agent.py  reviewer_agent.py
src/ingestion/application/: ingest_code_service.py
src/observability/: __init__.py  base_agent_observer.py  langfuse_tracer.py  langfuse_utils.py
test_data/: README.md  __init__.py  sample_bug.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py
(+31 files in other folders)
